--- a/src/styles/style.css
+++ b/src/styles/style.css
@@ -15,7 +15,6 @@ ul {
 body {
   font-family: HelveticaNeueCyr;
   background-color: black;
-  height: 10000px;
 }
 
 .header {
@@ -814,4 +813,320 @@ body {
   line-height: 20px;
   text-align: center;
   color: #333333;
+}
+
+.block-platforms {
+  /* background-image: url('./../images/bg_new\ 2.png'), url('./../images/bg_new\ 1.png'); */
+  /* background-position: bottom, top; */
+  background-image: url('./../images/mega-bg.png');
+  background-size: 100% 100%;
+  background-repeat: no-repeat;
+}
+
+.block-wrapper__platforms {
+  padding: 80px 0 125px;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+}
+
+.platforms-header {
+  max-width: 698px;
+}
+
+.platforms-title {
+  font-family: HelveticaNeueCyr;
+  font-style: normal;
+  font-weight: 300;
+  font-size: 18px;
+  line-height: 105.19%;
+  text-align: center;
+  text-transform: uppercase;
+  color: #FFD600;
+}
+
+.platforms-question {
+  margin-top: 20px;
+  letter-spacing: -0.6px;
+  font-family: HelveticaNeueCyr;
+  font-style: normal;
+  font-weight: 900;
+  font-size: 30px;
+  line-height: 125%;
+  text-align: center;
+  text-transform: uppercase;
+  color: #FFFFFF;
+}
+                
+.platforms-description {
+  font-family: HelveticaNeueCyr;
+  font-style: normal;
+  font-weight: 300;
+  font-size: 18px;
+  line-height: 145%;
+  color: white;
+}
+
+.vs-column__title {
+  margin-top: 16px;
+  font-family: HelveticaNeueCyr;
+  font-style: normal;
+  font-weight: 550;
+  font-size: 25px;
+  line-height: 125%;
+  letter-spacing: -0.3px;
+  text-transform: uppercase;
+  color: #FFFFFF;
+}
+
+
+.vs-column__description {
+  margin-top: 10px;
+  padding-right: 36px;
+  font-family: HelveticaNeueCyr;
+  font-style: normal;
+  font-weight: 300;
+  font-size: 16px;
+  line-height: 145%;
+  color: #FFFFFF;
+}
+
+.vs-list__item {
+  padding-left: 40px;
+  margin-bottom: 26px;
+  position: relative;
+  left: 0;
+  top: 0;
+  font-family: HelveticaNeueCyr;
+  font-style: normal;
+  font-weight: 700;
+  font-size: 16px;
+  line-height: 125%;
+  color: #FFFFFF;
+}
+
+.vs-item__description {
+  font-weight: 400;
+  margin-top: 9px;
+}
+
+.platforms-description {
+  text-align: center;
+  margin-top: 24px;
+}
+
+.vs-block {
+  margin-top: 65px;
+  padding: 0 120px;
+  display: grid;
+  grid-template: 1fr / 1fr auto 1fr; 
+  align-items: flex-start;
+  position: relative;
+}                
+
+.vs-icon__border {
+  width: 63px;
+  height: 63px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  border-radius: 50%;
+  border: 1px solid #FFB800;
+  box-sizing: border-box;
+}
+
+.vs-icon {
+  font-family: HelveticaNeueCyr;
+  font-style: normal;
+  font-weight: 300;
+  font-size: 25px;
+  line-height: 125%;
+  text-transform: uppercase;
+  color: #FFB800;
+}
+
+.vs-column__left {
+  padding-left: 61px;
+}
+
+.vs-column__right {
+  padding-left: 54px;
+}
+
+.vs-column__logo {
+  position: relative;
+  left: 65px;
+  top: 1px;
+}
+
+.vs-logo__robot {
+  left: 38px;
+  top: -1px;
+}
+
+.vs-column__list {
+  margin-top: 33px;
+}
+
+.vs-item__title {
+  position: relative;
+  top: 4px;
+}
+
+.vs-item__logo {
+  position: absolute;
+  left: 0;
+  top: 0;
+}
+
+.vs-column__line {
+  align-self: flex-start;
+  margin-top: 92px;
+  height: 86px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  background: #121317;
+  z-index: 50;
+}
+
+.vs-column__right::before {
+  content: "";
+  display: block;
+  width: 0;
+  height: 100%;
+  position: absolute;
+  top: -18px;
+  left: 50%;
+  border: 1px solid #FFB800;
+}
+
+.arbitrage-bg {
+  width: 92%;
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  max-width: 1920px;
+}
+
+.footer {
+  width: 100%;
+  padding: 15px 0 26px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-direction: column;
+  background: black;
+}
+
+.footer-company__date {
+  position: relative;
+  left: 24px;
+  top: 10px;
+  font-family: MADE Tommy Soft;
+  font-style: normal;
+  font-weight: normal;
+  font-size: 17px;
+  line-height: 22px;
+  text-align: center;
+  color: #FFFFFF;
+}
+
+@media (max-width: 1200px) {
+  .header-wrapper,
+  .block-advantages__wrapper,
+  .block-wrapper,
+  .vs-block {
+    padding-left: 40px;
+    padding-right: 40px;
+  }
+
+  .text-wrapper {
+    max-width: unset;
+  }
+
+  .image-wrapper__phone {
+    left: 0;
+  }
+}
+
+@media (max-width: 1024px) {
+  .scheme-wrapper {
+    display: grid;
+    grid-template: auto auto / auto auto;
+  }
+
+  .scheme-wrapper__graph {
+    grid-area: 1/1/2/3;
+  }
+
+  .scheme-column__text {
+    grid-area: 2/1/3/2;
+  }
+
+  .column-text_2 {
+    grid-area: 2/2/3/3;
+  }
+
+  .scheme-column__description {
+    margin-top: 16px;
+  }
+
+  .block-wrapper__help {
+    flex-direction: column;
+    align-items: flex-start;
+    justify-content: center;
+  }
+
+  .main-help {
+    padding-top: 70px;
+    padding-bottom: 0;
+  }
+
+  .text-wrapper {
+    max-width: 290px;
+  }
+
+  .image-wrapper {
+    max-width: unset;
+    width: 100%;
+    height: 242px;
+    box-sizing: border-box;
+    /* padding: 0 50px; */
+    display: flex;
+    margin-top: 15px;
+    align-items: flex-end;
+    justify-content: flex-end;
+    position: relative;
+    border-radius: 8px;
+    background: #FFD600;
+  }
+
+  .stats__bglogo {
+    top: 50%;
+    transform: translateY(-50%);
+  }
+
+  .draw {
+    width: 100%;
+    align-items: center;
+  }
+
+  .draw-image {
+    width: 50%;    
+  }
+}
+
+@media (max-width: 768px) {
+  .vs-column__left,
+  .vs-column__right {
+    padding: 0;
+  }
+
+  .block-stats__wrapper::after {
+    right: 0;
+    bottom: -70px;
+  }
 }
