--- a/src/styles/style.css
+++ b/src/styles/style.css
@@ -1476,6 +1476,15 @@ body {
     padding-top: 40px;
     padding-bottom: 40px;
   }
+
+  .block-platforms {
+    background-size: cover;
+    background-position: bottom;
+  }
+
+  .footer {
+    padding: 15px 0;
+  }
 }
 
 @media (max-width: 590px) {
