--- a/src/styles/style.css
+++ b/src/styles/style.css
@@ -962,15 +962,20 @@ body {
 
 .vs-column__left {
   padding-left: 61px;
+  grid-area: 1/1/2/2;
 }
 
 .vs-column__right {
   padding-left: 54px;
+  grid-area: 1/3/2/4;
 }
 
 .vs-column {
-  /* display: grid; */
-  /* height: 100%; */
+  max-width: 460px;
+}
+
+.vs-column br {
+  display: none;
 }
 
 .vs-column__logo {
@@ -1000,6 +1005,7 @@ body {
 }
 
 .vs-column__line {
+  grid-area: 1/2/2/3;
   align-self: flex-start;
   margin-top: 92px;
   height: 86px;
@@ -1388,6 +1394,15 @@ body {
   .labels-wrapper {
     display: flex;
     justify-content: center;
+    grid-area: 1/1/2/3;
+  }
+
+  .vs-column__left {
+    grid-area: 2/1/3/3;
+  }
+
+  .vs-column__right {
+    grid-area: 2/1/3/3;
   }
 
   .vs-label {
