--- a/src/styles/style.css
+++ b/src/styles/style.css
@@ -25,7 +25,7 @@ body {
 .header {
   width: 100%;
   max-width: 100vw;
-  position: fixed;
+  position: absolute;
   top: 0px;
   left: 0;
   z-index: 100;
@@ -1233,6 +1233,7 @@ body {
     height: 508px;
     width: 96px;
     background-size: cover;
+    z-index: 0;
   }
 
   .block-networks {
@@ -1517,9 +1518,11 @@ body {
   }
 
   .main-block__stats {
-    background: url('./../images/Group 101.png');
+    background: url('./../images/stats-bg-big.png');
     background-size: cover;
     background-repeat: no-repeat;
+    background-position: bottom;
+
   }
 
   .scheme-wrapper {
@@ -1563,6 +1566,10 @@ body {
     font-size: 22px;
   }
 
+  .stats-title__big {
+    font-size: 20px;
+  }
+
   .block-description,
   .help-description,
   .networks-description,
@@ -1570,10 +1577,19 @@ body {
     font-size: 15px;
   }
 
+  .block-stats__wrapper::after {
+    height: 358px;
+    width: 66px;
+  }
+
   .header-wrapper {
     padding: 10px 15px 0;
     align-items: center;
     background: rgba(0, 0, 0, 0.05);
+  }
+
+  .stats-numbers__list {
+    margin-top: 60px;
   }
 
   .header-wrapper .menu-burger {
@@ -1602,9 +1618,17 @@ body {
   }
 
   .stats-button {
-    max-width: 320px;
+    max-width: 255px;
     width: 100%;
     height: 44px;
+  }
+
+  .stats-numbers__item {
+    margin: 12px 8px;
+  }
+
+  .block-stats__wrapper {
+    padding-bottom: 34px;
   }
 
   .stats-button__text {
